testsuite/tests/saks/should_fail/saks_fail021.stderr

saks_fail021.hs:10:1: error:
    • Expected kind ‘k’, but ‘a’ has kind ‘*’
    • In the class declaration for ‘C’
